2008-10-12  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): If toolbar is disabled but ought to
	be initialized, call tool-bar-setup.

	* tool-bar.el (tool-bar-setup): Variable deleted.
	(tool-bar-setup): Set it up unconditionally.

	* faces.el (x-create-frame-with-faces): Don't call tool-bar-setup.

	* progmodes/grep.el (grep-mode-tool-bar-map): Check if
	tool-bar-map has been initialized before setting it up.

	* progmodes/compile.el (compilation-mode-tool-bar-map): Check if
	tool-bar-map has been initialized before setting it up.

2008-10-11  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/warnings.el (display-warning): Issue a message if
	called during daemon initialization.

	* tool-bar.el (tool-bar-local-item)
	(tool-bar-local-item-from-menu): Put the check for number of
	display colors into the image expression.
	(tool-bar-setup): Don't be a no-op on ttys.

	* info.el (info-tool-bar-map): Initialize it unconditionally.

	* progmodes/gud.el (gud-tool-bar-map): Initialize it
	unconditionally.

	* progmodes/grep.el (grep-mode-tool-bar-map): Initialize it
	unconditionally.

	* progmodes/compile.el (compilation-mode-tool-bar-map): Initialize
	it unconditionally.

2008-10-11  Romain Francoise  <romain@orebokech.com>

	* help.el (view-lossage): Fix docstring, lossage is now 300 keys.
	* kmacro.el (kmacro-edit-lossage): Ditto.
	* edmacro.el (edit-kbd-macro): Ditto.

2008-10-11  Ulf Jasper  <ulf@web.de>

	* net/newst-treeview.el (newsticker--treeview-list-sort-by-column):
	Fixed variable names.

2008-10-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line): Revert 2008-09-26 change, not
	necessary anymore.

2008-10-10  Andreas Schwab  <schwab@suse.de>

	* simple.el (minibuffer-complete-shell-command): Bind
	comint-delimiter-argument-list, comint-file-name-chars and
	comint-file-name-quote-list like shell-mode.

2008-10-10  Martin Rudalics  <rudalics@gmx.at>

	* window.el (pop-to-buffer): Fix misplacement of arg norecord in